airtable mothballed - requires per instance api keys

--- a/package.json
+++ b/package.json
@@ -29,5 +29,7 @@
     "webpack-dev-server": "3.7.1",
     "write-file-webpack-plugin": "4.5.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "airtable-plus": "^1.0.4"
+  }
 }
