--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,11 +5,11 @@
     "page": "background.html"
   },
   "browser_action": {
-    "default_popup": "popup.html",
-    "default_icon": "icon-34.png"
+    "default_popup": "popup.bundle.js",
+    "default_icon": "icon_48.png"
   },
   "icons": {
-    "128": "icon-128.png"
+    "128": "icon_128.png"
   },
   "content_scripts": [
     {
